fix footer wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ footer address{
 .footer-items-container {
     display: flex;
     flex-direction: column;
-
+    flex-wrap: wrap;
 }
 
 @media (min-width:700px)
@@ -108,12 +108,12 @@ footer address{
 }
 
 .footer-items-container > div {
-    flex: 1;
+    flex: 1 0 auto;
     padding: 16px;
 }
 
 .footer-wrapper {
-    max-width: 960px;
+    max-width: 1100px;
     margin:0 auto;
     padding-right: 32px;
     padding-left: 32px;
